# pdf-reader-demo

./: README.md  pdfviewer.py  pyproject.toml  reader.py
