[tool.poetry]
name = "demo-pdf-reader"
version = "0.1.0"
description = "pdf reader using tk and poppler/pypdf"
authors = ["Aly Sewelam <linlysmolworthy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tk = "^0.1.0"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
